# pygensvd

./: CMakeLists.txt  MANIFEST.in  README.md  pygsvd.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
pygensvd/: __init__.py
src/: _gsvd.c
tests/: test_gsvd.py
